--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -774,108 +774,108 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>629</th>\n",
-       "      <td>76</td>\n",
+       "      <th>1142</th>\n",
+       "      <td>105</td>\n",
        "      <td>0</td>\n",
-       "      <td>299.5</td>\n",
-       "      <td>226.7</td>\n",
-       "      <td>210.7</td>\n",
-       "      <td>13.7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>125</td>\n",
-       "      <td>50.92</td>\n",
-       "      <td>92</td>\n",
-       "      <td>19.27</td>\n",
-       "      <td>134</td>\n",
-       "      <td>9.48</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3.70</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3250</th>\n",
-       "      <td>55</td>\n",
-       "      <td>0</td>\n",
-       "      <td>132.0</td>\n",
-       "      <td>279.6</td>\n",
-       "      <td>180.0</td>\n",
-       "      <td>13.5</td>\n",
-       "      <td>0</td>\n",
-       "      <td>103</td>\n",
-       "      <td>22.44</td>\n",
+       "      <td>106.4</td>\n",
+       "      <td>240.1</td>\n",
+       "      <td>147.7</td>\n",
+       "      <td>5.3</td>\n",
+       "      <td>6</td>\n",
+       "      <td>71</td>\n",
+       "      <td>18.09</td>\n",
+       "      <td>83</td>\n",
+       "      <td>20.41</td>\n",
        "      <td>114</td>\n",
-       "      <td>23.77</td>\n",
-       "      <td>74</td>\n",
-       "      <td>8.10</td>\n",
+       "      <td>6.65</td>\n",
        "      <td>4</td>\n",
-       "      <td>3.65</td>\n",
+       "      <td>1.43</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>80</th>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>201.1</td>\n",
+       "      <td>303.5</td>\n",
+       "      <td>224.0</td>\n",
+       "      <td>13.2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>99</td>\n",
+       "      <td>34.19</td>\n",
+       "      <td>74</td>\n",
+       "      <td>25.80</td>\n",
+       "      <td>119</td>\n",
+       "      <td>10.08</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3.56</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>953</th>\n",
-       "      <td>132</td>\n",
-       "      <td>39</td>\n",
-       "      <td>175.7</td>\n",
-       "      <td>187.2</td>\n",
-       "      <td>225.5</td>\n",
-       "      <td>8.6</td>\n",
-       "      <td>2</td>\n",
-       "      <td>93</td>\n",
-       "      <td>29.87</td>\n",
-       "      <td>94</td>\n",
-       "      <td>15.91</td>\n",
-       "      <td>118</td>\n",
-       "      <td>10.15</td>\n",
-       "      <td>3</td>\n",
-       "      <td>2.32</td>\n",
+       "      <th>1134</th>\n",
+       "      <td>105</td>\n",
        "      <td>0</td>\n",
+       "      <td>206.2</td>\n",
+       "      <td>256.4</td>\n",
+       "      <td>117.1</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>84</td>\n",
+       "      <td>35.05</td>\n",
+       "      <td>138</td>\n",
+       "      <td>21.79</td>\n",
+       "      <td>91</td>\n",
+       "      <td>5.27</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2652</th>\n",
+       "      <td>111</td>\n",
+       "      <td>0</td>\n",
+       "      <td>181.8</td>\n",
+       "      <td>158.1</td>\n",
+       "      <td>266.2</td>\n",
+       "      <td>9.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>117</td>\n",
+       "      <td>30.91</td>\n",
+       "      <td>91</td>\n",
+       "      <td>13.44</td>\n",
+       "      <td>123</td>\n",
+       "      <td>11.98</td>\n",
+       "      <td>9</td>\n",
+       "      <td>2.62</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2911</th>\n",
+       "      <td>127</td>\n",
+       "      <td>0</td>\n",
+       "      <td>256.5</td>\n",
+       "      <td>222.1</td>\n",
+       "      <td>156.7</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>87</td>\n",
+       "      <td>43.61</td>\n",
+       "      <td>101</td>\n",
+       "      <td>18.88</td>\n",
+       "      <td>122</td>\n",
+       "      <td>7.05</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3.51</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1776</th>\n",
-       "      <td>62</td>\n",
-       "      <td>0</td>\n",
-       "      <td>172.4</td>\n",
-       "      <td>230.5</td>\n",
-       "      <td>228.2</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>132</td>\n",
-       "      <td>29.31</td>\n",
-       "      <td>100</td>\n",
-       "      <td>19.59</td>\n",
-       "      <td>109</td>\n",
-       "      <td>10.27</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.97</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1888</th>\n",
-       "      <td>117</td>\n",
-       "      <td>0</td>\n",
-       "      <td>191.1</td>\n",
-       "      <td>282.8</td>\n",
-       "      <td>84.8</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>93</td>\n",
-       "      <td>32.49</td>\n",
-       "      <td>56</td>\n",
-       "      <td>24.04</td>\n",
-       "      <td>118</td>\n",
-       "      <td>3.82</td>\n",
-       "      <td>4</td>\n",
-       "      <td>3.24</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -884,32 +884,32 @@
       ],
       "text/plain": [
        "      Account_Length  Vmail_Message  Day_Mins  Eve_Mins  Night_Mins  \\\n",
-       "629               76              0     299.5     226.7       210.7   \n",
-       "3250              55              0     132.0     279.6       180.0   \n",
-       "953              132             39     175.7     187.2       225.5   \n",
-       "1776              62              0     172.4     230.5       228.2   \n",
-       "1888             117              0     191.1     282.8        84.8   \n",
+       "1142             105              0     106.4     240.1       147.7   \n",
+       "80               144              0     201.1     303.5       224.0   \n",
+       "1134             105              0     206.2     256.4       117.1   \n",
+       "2652             111              0     181.8     158.1       266.2   \n",
+       "2911             127              0     256.5     222.1       156.7   \n",
        "\n",
        "      Intl_Mins  CustServ_Calls  Day_Calls  Day_Charge  Eve_Calls  Eve_Charge  \\\n",
-       "629        13.7               0        125       50.92         92       19.27   \n",
-       "3250       13.5               0        103       22.44        114       23.77   \n",
-       "953         8.6               2         93       29.87         94       15.91   \n",
-       "1776       11.0               0        132       29.31        100       19.59   \n",
-       "1888       12.0               2         93       32.49         56       24.04   \n",
+       "1142        5.3               6         71       18.09         83       20.41   \n",
+       "80         13.2               1         99       34.19         74       25.80   \n",
+       "1134        9.0               1         84       35.05        138       21.79   \n",
+       "2652        9.7               0        117       30.91         91       13.44   \n",
+       "2911       13.0               1         87       43.61        101       18.88   \n",
        "\n",
        "      Night_Calls  Night_Charge  Intl_Calls  Intl_Charge  Churn_yes  \\\n",
-       "629           134          9.48           4         3.70          1   \n",
-       "3250           74          8.10           4         3.65          0   \n",
-       "953           118         10.15           3         2.32          0   \n",
-       "1776          109         10.27           5         2.97          0   \n",
-       "1888          118          3.82           4         3.24          0   \n",
+       "1142          114          6.65           4         1.43          1   \n",
+       "80            119         10.08           2         3.56          0   \n",
+       "1134           91          5.27           3         2.43          0   \n",
+       "2652          123         11.98           9         2.62          0   \n",
+       "2911          122          7.05           3         3.51          0   \n",
        "\n",
        "      Intl_Plan_yes  Vmail_Plan_yes  \n",
-       "629               0               0  \n",
-       "3250              0               0  \n",
-       "953               0               1  \n",
-       "1776              0               0  \n",
-       "1888              0               0  "
+       "1142              0               0  \n",
+       "80                0               0  \n",
+       "1134              0               0  \n",
+       "2652              0               0  \n",
+       "2911              1               0  "
       ]
      },
      "metadata": {},
@@ -1320,7 +1320,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Findings"
+    "### Findings\n",
+    "Data Transformation doesn't improve model performance of this dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Separating the features and target variable"
    ]
   }
  ],
@@ -1329,8 +1337,7 @@
    "hash": "40c2fac8deeaeec80c11f86338dc80eaddcd45c6ab0761f221b780b5a4c0da1b"
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
-   "language": "python",
+   "display_name": "Python 3.8.8 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
