--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -774,106 +774,106 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1142</th>\n",
-       "      <td>105</td>\n",
+       "      <th>701</th>\n",
+       "      <td>94</td>\n",
        "      <td>0</td>\n",
-       "      <td>106.4</td>\n",
-       "      <td>240.1</td>\n",
-       "      <td>147.7</td>\n",
-       "      <td>5.3</td>\n",
-       "      <td>6</td>\n",
-       "      <td>71</td>\n",
-       "      <td>18.09</td>\n",
-       "      <td>83</td>\n",
-       "      <td>20.41</td>\n",
-       "      <td>114</td>\n",
-       "      <td>6.65</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1.43</td>\n",
-       "      <td>1</td>\n",
+       "      <td>139.4</td>\n",
+       "      <td>159.1</td>\n",
+       "      <td>128.2</td>\n",
+       "      <td>7.7</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>80</th>\n",
-       "      <td>144</td>\n",
-       "      <td>0</td>\n",
-       "      <td>201.1</td>\n",
-       "      <td>303.5</td>\n",
-       "      <td>224.0</td>\n",
-       "      <td>13.2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>99</td>\n",
-       "      <td>34.19</td>\n",
-       "      <td>74</td>\n",
-       "      <td>25.80</td>\n",
-       "      <td>119</td>\n",
-       "      <td>10.08</td>\n",
-       "      <td>2</td>\n",
-       "      <td>3.56</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1134</th>\n",
-       "      <td>105</td>\n",
-       "      <td>0</td>\n",
-       "      <td>206.2</td>\n",
-       "      <td>256.4</td>\n",
-       "      <td>117.1</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>84</td>\n",
-       "      <td>35.05</td>\n",
-       "      <td>138</td>\n",
-       "      <td>21.79</td>\n",
-       "      <td>91</td>\n",
-       "      <td>5.27</td>\n",
+       "      <td>95</td>\n",
+       "      <td>23.70</td>\n",
+       "      <td>92</td>\n",
+       "      <td>13.52</td>\n",
+       "      <td>129</td>\n",
+       "      <td>5.77</td>\n",
        "      <td>3</td>\n",
-       "      <td>2.43</td>\n",
+       "      <td>2.08</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2652</th>\n",
-       "      <td>111</td>\n",
+       "      <th>3088</th>\n",
+       "      <td>100</td>\n",
+       "      <td>29</td>\n",
+       "      <td>213.6</td>\n",
+       "      <td>175.9</td>\n",
+       "      <td>207.2</td>\n",
+       "      <td>8.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>127</td>\n",
+       "      <td>36.31</td>\n",
+       "      <td>82</td>\n",
+       "      <td>14.95</td>\n",
+       "      <td>100</td>\n",
+       "      <td>9.32</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.40</td>\n",
        "      <td>0</td>\n",
-       "      <td>181.8</td>\n",
-       "      <td>158.1</td>\n",
-       "      <td>266.2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2052</th>\n",
+       "      <td>183</td>\n",
+       "      <td>0</td>\n",
+       "      <td>116.7</td>\n",
+       "      <td>213.8</td>\n",
+       "      <td>214.3</td>\n",
        "      <td>9.7</td>\n",
-       "      <td>0</td>\n",
-       "      <td>117</td>\n",
-       "      <td>30.91</td>\n",
-       "      <td>91</td>\n",
-       "      <td>13.44</td>\n",
-       "      <td>123</td>\n",
-       "      <td>11.98</td>\n",
-       "      <td>9</td>\n",
+       "      <td>2</td>\n",
+       "      <td>92</td>\n",
+       "      <td>19.84</td>\n",
+       "      <td>112</td>\n",
+       "      <td>18.17</td>\n",
+       "      <td>112</td>\n",
+       "      <td>9.64</td>\n",
+       "      <td>6</td>\n",
        "      <td>2.62</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2911</th>\n",
-       "      <td>127</td>\n",
+       "      <th>262</th>\n",
+       "      <td>117</td>\n",
        "      <td>0</td>\n",
-       "      <td>256.5</td>\n",
-       "      <td>222.1</td>\n",
-       "      <td>156.7</td>\n",
-       "      <td>13.0</td>\n",
+       "      <td>143.3</td>\n",
+       "      <td>211.3</td>\n",
+       "      <td>185.2</td>\n",
+       "      <td>11.5</td>\n",
        "      <td>1</td>\n",
-       "      <td>87</td>\n",
-       "      <td>43.61</td>\n",
-       "      <td>101</td>\n",
-       "      <td>18.88</td>\n",
-       "      <td>122</td>\n",
-       "      <td>7.05</td>\n",
+       "      <td>103</td>\n",
+       "      <td>24.36</td>\n",
+       "      <td>108</td>\n",
+       "      <td>17.96</td>\n",
+       "      <td>96</td>\n",
+       "      <td>8.33</td>\n",
        "      <td>3</td>\n",
-       "      <td>3.51</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>495</th>\n",
+       "      <td>161</td>\n",
+       "      <td>0</td>\n",
+       "      <td>156.1</td>\n",
+       "      <td>180.3</td>\n",
+       "      <td>179.6</td>\n",
+       "      <td>11.1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>114</td>\n",
+       "      <td>26.54</td>\n",
+       "      <td>63</td>\n",
+       "      <td>15.33</td>\n",
+       "      <td>115</td>\n",
+       "      <td>8.08</td>\n",
+       "      <td>9</td>\n",
+       "      <td>3.00</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
@@ -884,32 +884,32 @@
       ],
       "text/plain": [
        "      Account_Length  Vmail_Message  Day_Mins  Eve_Mins  Night_Mins  \\\n",
-       "1142             105              0     106.4     240.1       147.7   \n",
-       "80               144              0     201.1     303.5       224.0   \n",
-       "1134             105              0     206.2     256.4       117.1   \n",
-       "2652             111              0     181.8     158.1       266.2   \n",
-       "2911             127              0     256.5     222.1       156.7   \n",
+       "701               94              0     139.4     159.1       128.2   \n",
+       "3088             100             29     213.6     175.9       207.2   \n",
+       "2052             183              0     116.7     213.8       214.3   \n",
+       "262              117              0     143.3     211.3       185.2   \n",
+       "495              161              0     156.1     180.3       179.6   \n",
        "\n",
        "      Intl_Mins  CustServ_Calls  Day_Calls  Day_Charge  Eve_Calls  Eve_Charge  \\\n",
-       "1142        5.3               6         71       18.09         83       20.41   \n",
-       "80         13.2               1         99       34.19         74       25.80   \n",
-       "1134        9.0               1         84       35.05        138       21.79   \n",
-       "2652        9.7               0        117       30.91         91       13.44   \n",
-       "2911       13.0               1         87       43.61        101       18.88   \n",
+       "701         7.7               0         95       23.70         92       13.52   \n",
+       "3088        8.9               1        127       36.31         82       14.95   \n",
+       "2052        9.7               2         92       19.84        112       18.17   \n",
+       "262        11.5               1        103       24.36        108       17.96   \n",
+       "495        11.1               2        114       26.54         63       15.33   \n",
        "\n",
        "      Night_Calls  Night_Charge  Intl_Calls  Intl_Charge  Churn_yes  \\\n",
-       "1142          114          6.65           4         1.43          1   \n",
-       "80            119         10.08           2         3.56          0   \n",
-       "1134           91          5.27           3         2.43          0   \n",
-       "2652          123         11.98           9         2.62          0   \n",
-       "2911          122          7.05           3         3.51          0   \n",
+       "701           129          5.77           3         2.08          0   \n",
+       "3088          100          9.32           3         2.40          0   \n",
+       "2052          112          9.64           6         2.62          0   \n",
+       "262            96          8.33           3         3.11          0   \n",
+       "495           115          8.08           9         3.00          0   \n",
        "\n",
        "      Intl_Plan_yes  Vmail_Plan_yes  \n",
-       "1142              0               0  \n",
-       "80                0               0  \n",
-       "1134              0               0  \n",
-       "2652              0               0  \n",
-       "2911              1               0  "
+       "701               0               0  \n",
+       "3088              0               1  \n",
+       "2052              0               0  \n",
+       "262               0               0  \n",
+       "495               1               0  "
       ]
      },
      "metadata": {},
@@ -1333,9 +1333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3333, 17) (3333, 1)\n"
+     ]
+    }
+   ],
    "source": [
     "target = ['Churn_yes']\n",
     "\n",
@@ -1357,14 +1365,23 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Split the dataset intro train and test set\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, \n",
+    "                                                    y, \n",
+    "                                                    test_size=0.2, \n",
+    "                                                    random_state=42, \n",
+    "                                                    stratify=y)\n",
+    "\n",
+    "print(X_train.shape, X_test.shape, y_train.shape, y_test.shape)"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Grid Search and Cross-Validation with Decision Tree Classifier"
+   ]
   },
   {
    "cell_type": "code",
