--- a/Jupyter Notebooks/churn_analysis.ipynb
+++ b/Jupyter Notebooks/churn_analysis.ipynb
@@ -774,106 +774,106 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1821</th>\n",
+       "      <th>1459</th>\n",
+       "      <td>95</td>\n",
+       "      <td>0</td>\n",
+       "      <td>197.0</td>\n",
+       "      <td>190.4</td>\n",
+       "      <td>211.9</td>\n",
+       "      <td>16.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>88</td>\n",
+       "      <td>33.49</td>\n",
+       "      <td>68</td>\n",
+       "      <td>16.18</td>\n",
+       "      <td>104</td>\n",
+       "      <td>9.54</td>\n",
+       "      <td>8</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>910</th>\n",
+       "      <td>42</td>\n",
+       "      <td>32</td>\n",
+       "      <td>163.8</td>\n",
+       "      <td>177.8</td>\n",
+       "      <td>190.4</td>\n",
+       "      <td>8.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>80</td>\n",
+       "      <td>27.85</td>\n",
        "      <td>123</td>\n",
-       "      <td>39</td>\n",
-       "      <td>270.4</td>\n",
-       "      <td>245.1</td>\n",
-       "      <td>108.9</td>\n",
-       "      <td>15.4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>99</td>\n",
-       "      <td>45.97</td>\n",
-       "      <td>110</td>\n",
-       "      <td>20.83</td>\n",
-       "      <td>113</td>\n",
-       "      <td>4.90</td>\n",
-       "      <td>7</td>\n",
-       "      <td>4.16</td>\n",
+       "      <td>15.11</td>\n",
+       "      <td>106</td>\n",
+       "      <td>8.57</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2.19</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>242</th>\n",
-       "      <td>36</td>\n",
+       "      <th>2269</th>\n",
+       "      <td>138</td>\n",
+       "      <td>37</td>\n",
+       "      <td>75.8</td>\n",
+       "      <td>173.6</td>\n",
+       "      <td>162.6</td>\n",
+       "      <td>8.2</td>\n",
        "      <td>0</td>\n",
-       "      <td>253.4</td>\n",
-       "      <td>182.4</td>\n",
-       "      <td>275.8</td>\n",
-       "      <td>8.4</td>\n",
+       "      <td>102</td>\n",
+       "      <td>12.89</td>\n",
+       "      <td>147</td>\n",
+       "      <td>14.76</td>\n",
+       "      <td>96</td>\n",
+       "      <td>7.32</td>\n",
+       "      <td>13</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>77</td>\n",
-       "      <td>43.08</td>\n",
-       "      <td>151</td>\n",
-       "      <td>15.50</td>\n",
-       "      <td>103</td>\n",
-       "      <td>12.41</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.27</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>146</td>\n",
-       "      <td>0</td>\n",
-       "      <td>206.3</td>\n",
-       "      <td>148.6</td>\n",
-       "      <td>167.2</td>\n",
-       "      <td>6.1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>151</td>\n",
-       "      <td>35.07</td>\n",
-       "      <td>89</td>\n",
-       "      <td>12.63</td>\n",
-       "      <td>91</td>\n",
-       "      <td>7.52</td>\n",
+       "      <th>38</th>\n",
+       "      <td>136</td>\n",
+       "      <td>33</td>\n",
+       "      <td>203.9</td>\n",
+       "      <td>187.6</td>\n",
+       "      <td>101.7</td>\n",
+       "      <td>10.5</td>\n",
        "      <td>3</td>\n",
-       "      <td>1.65</td>\n",
+       "      <td>106</td>\n",
+       "      <td>34.66</td>\n",
+       "      <td>99</td>\n",
+       "      <td>15.95</td>\n",
+       "      <td>107</td>\n",
+       "      <td>4.58</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.84</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1143</th>\n",
-       "      <td>105</td>\n",
-       "      <td>29</td>\n",
-       "      <td>179.4</td>\n",
-       "      <td>275.4</td>\n",
-       "      <td>246.1</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>113</td>\n",
-       "      <td>30.50</td>\n",
-       "      <td>100</td>\n",
-       "      <td>23.41</td>\n",
-       "      <td>105</td>\n",
-       "      <td>11.07</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.70</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1803</th>\n",
-       "      <td>101</td>\n",
+       "      <th>439</th>\n",
+       "      <td>81</td>\n",
        "      <td>0</td>\n",
-       "      <td>174.9</td>\n",
-       "      <td>262.0</td>\n",
-       "      <td>210.0</td>\n",
-       "      <td>8.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>105</td>\n",
-       "      <td>29.73</td>\n",
-       "      <td>75</td>\n",
-       "      <td>22.27</td>\n",
-       "      <td>93</td>\n",
-       "      <td>9.45</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2.30</td>\n",
+       "      <td>153.5</td>\n",
+       "      <td>197.6</td>\n",
+       "      <td>198.5</td>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>99</td>\n",
+       "      <td>26.10</td>\n",
+       "      <td>102</td>\n",
+       "      <td>16.80</td>\n",
+       "      <td>86</td>\n",
+       "      <td>8.93</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.70</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
@@ -884,32 +884,32 @@
       ],
       "text/plain": [
        "      Account_Length  Vmail_Message  Day_Mins  Eve_Mins  Night_Mins  \\\n",
-       "1821             123             39     270.4     245.1       108.9   \n",
-       "242               36              0     253.4     182.4       275.8   \n",
-       "164              146              0     206.3     148.6       167.2   \n",
-       "1143             105             29     179.4     275.4       246.1   \n",
-       "1803             101              0     174.9     262.0       210.0   \n",
+       "1459              95              0     197.0     190.4       211.9   \n",
+       "910               42             32     163.8     177.8       190.4   \n",
+       "2269             138             37      75.8     173.6       162.6   \n",
+       "38               136             33     203.9     187.6       101.7   \n",
+       "439               81              0     153.5     197.6       198.5   \n",
        "\n",
        "      Intl_Mins  CustServ_Calls  Day_Calls  Day_Charge  Eve_Calls  Eve_Charge  \\\n",
-       "1821       15.4               1         99       45.97        110       20.83   \n",
-       "242         8.4               1         77       43.08        151       15.50   \n",
-       "164         6.1               1        151       35.07         89       12.63   \n",
-       "1143       10.0               0        113       30.50        100       23.41   \n",
-       "1803        8.5               1        105       29.73         75       22.27   \n",
+       "1459       16.1               0         88       33.49         68       16.18   \n",
+       "910         8.1               0         80       27.85        123       15.11   \n",
+       "2269        8.2               0        102       12.89        147       14.76   \n",
+       "38         10.5               3        106       34.66         99       15.95   \n",
+       "439         6.3               2         99       26.10        102       16.80   \n",
        "\n",
        "      Night_Calls  Night_Charge  Intl_Calls  Intl_Charge  Churn_yes  \\\n",
-       "1821          113          4.90           7         4.16          0   \n",
-       "242           103         12.41           2         2.27          0   \n",
-       "164            91          7.52           3         1.65          0   \n",
-       "1143          105         11.07           5         2.70          0   \n",
-       "1803           93          9.45           5         2.30          0   \n",
+       "1459          104          9.54           8         4.35          0   \n",
+       "910           106          8.57           5         2.19          0   \n",
+       "2269           96          7.32          13         2.21          0   \n",
+       "38            107          4.58           6         2.84          0   \n",
+       "439            86          8.93           2         1.70          0   \n",
        "\n",
        "      Intl_Plan_yes  Vmail_Plan_yes  \n",
-       "1821              0               1  \n",
-       "242               0               0  \n",
-       "164               0               0  \n",
-       "1143              0               1  \n",
-       "1803              0               0  "
+       "1459              0               0  \n",
+       "910               0               1  \n",
+       "2269              0               1  \n",
+       "38                1               1  \n",
+       "439               0               0  "
       ]
      },
      "metadata": {},
@@ -1417,6 +1417,40 @@
    "source": [
     "### Best hyperparameters in the grid search"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'criterion': 'gini', 'max_depth': 6}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid_result.best_params_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tree Diagram"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
